--- a/CFP.App/Formularios/Cadastros/UserControlCadastroFormaPagamento.xaml
+++ b/CFP.App/Formularios/Cadastros/UserControlCadastroFormaPagamento.xaml
@@ -137,6 +137,16 @@
                                 Style="{StaticResource MaterialDesignFilterChipAccentCheckBox}" Margin="0,77,0,-76.4">
 
                 </CheckBox>
+                
+                <CheckBox x:Name="chkUsadoParaCompras" 
+                          Content="Usado Para Compras?"
+                          FontFamily="Champagne &amp; Limousines" 
+                                FontSize="22"  
+                                Foreground="#FF1F3D68"
+                                Style="{StaticResource MaterialDesignFilterChipAccentCheckBox}" Margin="0,293,0,65">
+
+                </CheckBox>
+                
             </Grid>
 
 
